force-app/main/default/objects/Financial_Product__c/Financial_Product__c.object-meta.xml
<CustomObject>
    <label>Financial Product</label>
    <nameField>
        <label>Financial Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>