force-app/main/default/objects/Financial_Product__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>